# timetable-server

./: .bowerrc  .editorconfig  .flaskenv  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  bower.json  mypy.ini  openapi.yaml  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  timetable.sql
.github/workflows/: build.yml
deployment/: backup.sh
deployment/nginx/: timetable.conf
deployment/supervisor/: timetable.conf
frontend/: .eslintignore  .eslintrc.js  .gitignore  .proxyrc.js  index.html  openapitools.json  package.json  tsconfig.json  vite.config.ts
frontend-react/: .gitignore  .proxyrc.js  package.json  parcel.d.ts  tsconfig.json
frontend-react/mock-middleware/: index.js
frontend-react/src/: App.tsx  index.html
frontend-react/src/components/: Note.module.css  Note.tsx
frontend-react/src/openapi/.openapi-generator/: FILES
frontend-react/src/openapi/apis/: NoteApi.ts  index.ts
frontend-react/src/openapi/models/: Note.ts
frontend-react/src/views/: Event.tsx
frontend/mock/: common.ts  event.js  event.ts  index.js  note.js  note.ts
frontend/src/: App.tsx  App.vue  api.ts  index.tsx
frontend/src/components/: Note.tsx  Note.vue
frontend/src/openapi/: runtime.ts
frontend/src/openapi/.openapi-generator/: FILES
frontend/src/openapi/apis/: CommonApi.ts  EventApi.ts  NoteApi.ts  index.ts
frontend/src/openapi/models/: Category.ts  Event.ts  InlineResponse200.ts  InlineResponse2001.ts  InlineResponse2002.ts  Note.ts  NoteForm.ts  index.ts
frontend/src/views/: Event.module.css  Event.tsx  Event.vue
react-parcel/: .gitignore  package.json
react-parcel/src/: App.tsx
react-parcel/src/components/: Button.tsx
react-parcel/src/views/: Event.module.css
src/main/java/com/shzhangji/timetable/: Application.java
src/main/java/com/shzhangji/timetable/controller/: EventController.java  HomeController.java  NoteController.java
src/main/java/com/shzhangji/timetable/form/: EventForm.java
src/main/java/com/shzhangji/timetable/model/: Category.java  Event.java  Note.java
src/main/java/com/shzhangji/timetable/repository/: EventRepository.java  NoteRepository.java
src/main/resources/: application.properties
src/main/resources/static/js/: event.js
src/main/resources/templates/: index.html
timetable/: __init__.py  consts.py  default_settings.py  openapi.py  timetable_apispec.py  utils.py
timetable/commands/: __init__.py  archive_notes.py  gen.py  spec.py
timetable/models/: event.py  note.py  user.py
timetable/schemas/: current_user.py  event.py  login_form.py  note.py
timetable/services/: event.py  note.py  user.py
timetable/static/: event.js
timetable/templates/event/: index.html
timetable/views/: __init__.py  event.py  index.py  note.py  user.py
timetable/views/models/: __init__.py  event.py  note.py  user.py
timetable/views/user/: index.py
timetable/views/user/schemas/: login_form.py
