[tool.poetry]
name = "timetable"
version = "0.1.0"
description = ""
authors = ["Jerry <zhangji87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.46"
python-dateutil = "^2.8.2"
python-dotenv = "^1.2.1"
pymysql = "^1.1.2"
flask-login = "^0.6.3"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mypy = "^1.19.1"
types-python-dateutil = "^2.8.2"
ruff = "^0.15.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "COM", "I", "N", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
plugins = [
  'pydantic.mypy',
]

[[tool.mypy.overrides]]
module = [
    'flask_login',
]
ignore_missing_imports = true
